test Envybox app:    add pattern fabric for create orders    orders add in DB and storage    add validation on server side

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,16 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+.message {
+    background: #000;
+    border: 1px solid $dark;
+    box-shadow: 12px 12px 2px 1px rgba(149, 97, 226, .2);
+}
+
+#createOrder {
+    background: #fff;
+    border: 1px solid $dark;
+    box-shadow: 12px 12px 2px 1px rgba(149, 97, 226, .2);
+}
